--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -64,6 +64,7 @@
         >
 
         <LinearLayout
+            android:id="@+id/ll_integral_detail"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -80,13 +81,12 @@
                 />
 
             <TextView
-                android:id="@+id/integral"
+                android:id="@+id/tv_integral"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="@color/white"
                 android:text="500"
-                />
+                android:textColor="@color/white"
+                android:textSize="16sp" />
 
         </LinearLayout>
 
@@ -135,7 +135,7 @@
         >
 
      <RelativeLayout
-         android:id="@+id/rl_integral_detail"
+
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="15dp">
